fixed spacing between h1 and h2

--- a/llama-love/llamalove.css
+++ b/llama-love/llamalove.css
@@ -35,27 +35,6 @@ footer, header, hgroup, menu, nav, section {
 }
 
 
-				
-h1			 {  font-size:20px;
-				font-style:bold;
-				font-family:Arial;
-				font-weight:bold;
-				font-size:25px;
-				letter-spacing:-1px;
-			 }   
-			 
-h2			 {  font-size:10px;
-				color:grey;
-				padding:5px;
-			 }  		 
-
-body {
-	line-height: 1;
-	margin:0 auto;
-	width:960px;
-	font-family:Arial;
-}
-
 
 ol, ul {
 	list-style: none;
@@ -97,14 +76,39 @@ html[xmlns] .clearfix { display: block; }
 * html .clearfix { height: 1%; }
 
 
+				
+h1			 {  font-size:20px;
+				font-style:bold;
+				font-family:Arial;
+				font-weight:bold;
+				font-size:25px;
+				letter-spacing:-1px;
+				padding:5px;
+			 }   
+			 
+h2			 {  font-size:10px;
+				color:grey;
+				padding:5px 0px 15px 0px;
+				
+			 }  		 
+
+body {
+	line-height: 1;
+	margin:0 auto;
+	width:960px;
+	font-family:Arial;
+}
+
 
 img {float:left;
 	 width:45%;
+	 padding:5px 15px 5px 5px;
 	}
 
 			
 article { width:45%;
 		  float:left;
+		  padding:10px;
 		}
 
 
